--- a/test.html
+++ b/test.html
@@ -59,12 +59,12 @@ var data1 = [
 var data2 = [
   {
     domain: { x: [0, 1], y: [0, 1] },
-    value: 8.03%,
-    title: { text: "Pct to Goal" },
+    value: 8.03,
+    title: { text: "% to Goal" },
     type: "indicator",
     mode: "gauge+number+delta",
-    delta: { reference: 95% },
-    gauge: { axis: { range: [null, 120%] } }
+    delta: { reference: 95 },
+    gauge: { axis: { range: [null, 120] } }
   }
 ];
 
