--- a/test.html
+++ b/test.html
@@ -72,12 +72,12 @@ var data2 = [
 var data3 = [
   {
     domain: { x: [0, 1], y: [0, 1] },
-    value: 39.67,
-    title: { text: "**Policy Hours" },
+    value: 5.55,
+    title: { text: "SVC Policy Hours" },
     type: "indicator",
     mode: "gauge+number+delta",
-    delta: { reference: 257 },
-    gauge: { axis: { range: [null, 300] } }
+    delta: { reference: 28.55 },
+    gauge: { axis: { range: [null, 50] } }
   }
 ];
 
