--- a/test.html
+++ b/test.html
@@ -72,12 +72,12 @@ var data2 = [
 var data3 = [
   {
     domain: { x: [0, 1], y: [0, 1] },
-    value: 16.1,
-    title: { text: "SVC Policy Hours" },
+    value: 3212,
+    title: { text: "SVC Policy Dollars" },
     type: "indicator",
     mode: "gauge+number+delta",
-    delta: { reference: 184},
-    gauge: { axis: { range: [null, 200] } }
+    delta: { reference: 25332},
+    gauge: { axis: { range: [null, 30000] } }
   }
 ];
 
