--- a/gauge.html
+++ b/gauge.html
@@ -66,7 +66,7 @@ async function updateCharts() {
             type: "indicator",
             mode: "gauge+number+delta",
             delta: { reference: deltaValues[0] },
-            gauge: { axis: { range: [null, Math.max(...gaugeValues)] } }
+            gauge: { axis: { range: [null, 200] } }
         }
     ];
 
@@ -79,7 +79,7 @@ async function updateCharts() {
             type: "indicator",
             mode: "gauge+number+delta",
             delta: { reference: deltaValues[1] },
-            gauge: { axis: { range: [null, Math.max(...gaugeValues)] } }
+            gauge: { axis: { range: [null, 150] } }
         }
     ];
 
@@ -92,7 +92,7 @@ async function updateCharts() {
             type: "indicator",
             mode: "gauge+number+delta",
             delta: { reference: deltaValues[2] },
-            gauge: { axis: { range: [null, Math.max(...gaugeValues)] } }
+            gauge: { axis: { range: [null, 30000] } }
         }
     ];
 
