--- a/dashboard2.html
+++ b/dashboard2.html
@@ -49,7 +49,7 @@
             <iframe src="text_rotator2.html" frameborder="0"></iframe>
         </div>
         <div class="iframe-container">
-            <iframe src="test.html" frameborder="0"></iframe>
+            <iframe src="gauge.html" frameborder="0"></iframe>
         </div>
     </div>
 </body>
