--- a/test.html
+++ b/test.html
@@ -20,6 +20,10 @@
             padding: 5px;
             background-color: #fff;
             border: 2px solid black;
+            text-align: center;
+        }
+        .chart-description {
+            margin-top: 5px;
         }
         .chart-container > div {
             width: 100%;
@@ -29,68 +33,92 @@
 </head>
 <body>
 
-<div class="chart-container">
-    <div id="myDiv1"></div> <!-- Container for the Plotly chart -->
-</div>
+<div class="chart-wrapper">
+    <div class="chart-container">
+        <div id="myDiv1"></div> <!-- Container for the Plotly chart -->
+        <div class="chart-description">Hours Per Day</div>
+    </div>
 
-<div class="chart-container">
-    <div id="myDiv2"></div> <!-- Container for the Plotly chart -->
-</div>
+    <div class="chart-container">
+        <div id="myDiv2"></div> <!-- Container for the Plotly chart -->
+        <div class="chart-description">% to Goal</div>
+    </div>
 
-<div class="chart-container">
-    <div id="myDiv3"></div> <!-- Container for the Plotly chart -->
+    <div class="chart-container">
+        <div id="myDiv3"></div> <!-- Container for the Plotly chart -->
+        <div class="chart-description">SVC Policy Dollars</div>
+    </div>
 </div>
 
 <script>
-// Data for chart 1
-var data1 = [
-  {
-    domain: { x: [0, 1], y: [0, 1] },
-    value: 105.72,
-    title: { text: "Hours Per Day" },
-    type: "indicator",
-    mode: "gauge+number+delta",
-    delta: { reference: 166 },
-    gauge: { axis: { range: [null, 200] } }
-  }
-];
+// Function to fetch CSV data and update charts
+async function updateCharts() {
+    // Fetch CSV data
+    const response = await fetch('gauge_data.csv');
+    const data = await response.text();
 
-// Data for chart 2
-var data2 = [
-  {
-    domain: { x: [0, 1], y: [0, 1] },
-    value: 8.03,
-    title: { text: "% to Goal" },
-    type: "indicator",
-    mode: "gauge+number+delta",
-    delta: { reference: 95 },
-    gauge: { axis: { range: [null, 150] } }
-  }
-];
+    // Parse CSV data
+    const rows = data.split('\n').slice(1); // Skip header row
+    const parsedData = rows.map(row => row.split(','));
 
-// Data for chart 3
-var data3 = [
-  {
-    domain: { x: [0, 1], y: [0, 1] },
-    value: 3212,
-    title: { text: "SVC Policy Dollars" },
-    type: "indicator",
-    mode: "gauge+number+delta",
-    delta: { reference: 25332},
-    gauge: { axis: { range: [null, 30000] } }
-  }
-];
+    // Extract values from parsed data
+    const gaugeValues = parsedData.map(row => parseFloat(row[1]));
+    const deltaValues = parsedData.map(row => parseFloat(row[2]));
+    const currentValues = parsedData.map(row => parseFloat(row[3]));
 
-// The layout of your charts
-var layout = { 
-    paper_bgcolor: "lightgray",
-    width: 400, height: 300 
-};
+    // Data for chart 1
+    var data1 = [
+        {
+            domain: { x: [0, 1], y: [0, 1] },
+            value: currentValues[0],
+            title: { text: "Hours Per Day" },
+            type: "indicator",
+            mode: "gauge+number+delta",
+            delta: { reference: deltaValues[0] },
+            gauge: { axis: { range: [null, 200] } }
+        }
+    ];
 
-// Rendering the charts
-Plotly.newPlot('myDiv1', data1, layout);
-Plotly.newPlot('myDiv2', data2, layout);
-Plotly.newPlot('myDiv3', data3, layout);
+    // Data for chart 2
+    var data2 = [
+        {
+            domain: { x: [0, 1], y: [0, 1] },
+            value: currentValues[1],
+            title: { text: "% to Goal" },
+            type: "indicator",
+            mode: "gauge+number+delta",
+            delta: { reference: deltaValues[1] },
+            gauge: { axis: { range: [null, 150] } }
+        }
+    ];
+
+    // Data for chart 3
+    var data3 = [
+        {
+            domain: { x: [0, 1], y: [0, 1] },
+            value: currentValues[2],
+            title: { text: "SVC Policy Dollars" },
+            type: "indicator",
+            mode: "gauge+number+delta",
+            delta: { reference: deltaValues[2] },
+            gauge: { axis: { range: [null, 30000] } }
+        }
+    ];
+
+    // The layout of your charts
+    var layout = {
+        paper_bgcolor: "lightgray",
+        width: 400, height: 300
+    };
+
+    // Rendering the charts
+    Plotly.newPlot('myDiv1', data1, layout);
+    Plotly.newPlot('myDiv2', data2, layout);
+    Plotly.newPlot('myDiv3', data3, layout);
+}
+
+// Call the updateCharts function to initially load the data
+updateCharts();
 </script>
 
 </body>
