--- a/test.html
+++ b/test.html
@@ -15,12 +15,16 @@
             margin: 0;
             background-color: #9E9C9B;
         }
+        .chart-wrapper {
+            display: flex;
+        }
         .chart-container {
             margin: 5px;
             padding: 5px;
             background-color: #fff;
             border: 2px solid black;
             text-align: center;
+            flex: 1;
         }
         .chart-description {
             margin-top: 5px;
