--- a/gauge.html
+++ b/gauge.html
@@ -66,7 +66,7 @@ async function updateCharts() {
             type: "indicator",
             mode: "gauge+number+delta",
             delta: { reference: deltaValues[0] },
-            //gauge: { axis: { range: [null, 200] } }
+            gauge: { axis: { range: [null, 200] },
              // The bar color does not dynamically change in this setup
             bar: { color: "lightgray" }, // Use a neutral color for the bar itself
             bgcolor: "white",
