--- a/gauge.html
+++ b/gauge.html
@@ -58,18 +58,26 @@ async function updateCharts() {
     const currentValues = parsedData.map(row => parseFloat(row[3]));
 
     // Data for chart 1
-    var data1 = [
-        {
-            domain: { x: [0, 1], y: [0, 1] },
-            value: currentValues[0],
-            title: { text: "Hours Per Day<br><span style='font-size:0.8em;color:gray'>Higher is Better</span>" },
-            type: "indicator",
-            mode: "gauge+number+delta",
-            delta: { reference: deltaValues[0] },
-            gauge: { axis: { range: [null, 200] },
-            
+   // Data for chart 1 with conditional coloring
+var data1 = [
+    {
+        domain: { x: [0, 1], y: [0, 1] },
+        value: currentValues[0],
+        title: { text: "Hours Per Day<br><span style='font-size:0.8em;color:gray'>Higher is Better</span>" },
+        type: "indicator",
+        mode: "gauge+number+delta",
+        delta: { reference: deltaValues[0] },
+        gauge: {
+            axis: { range: [null, 200] },
+            // Use conditional color based on whether current value exceeds the delta reference
+            steps: [
+                { range: [0, deltaValues[0]], color: "lightcoral" }, // Color before reaching delta reference
+                { range: [deltaValues[0], 200], color: "lightgreen" } // Color after reaching delta reference
+            ],
+            // Additional customization for the threshold or the appearance can be added here
         }
-    ];
+    }
+];
 
     // Data for chart 2
     var data2 = [
