--- a/gauge.html
+++ b/gauge.html
@@ -68,7 +68,8 @@ var data1 = [
         mode: "gauge+number+delta",
         delta: { reference: deltaValues[0] },
         gauge: {
-            axis: { range: [null, 200] },
+            axis: { range: [null, 200] tickwidth: 1, tickcolor: "darkblue"},
+             bar: { color: "lightgray" },
             // Use conditional color based on whether current value exceeds the delta reference
             steps: [
                 { range: [0, deltaValues[0]], color: "lightcoral" }, // Color before reaching delta reference
