--- a/gauge.html
+++ b/gauge.html
@@ -69,7 +69,7 @@ var data1 = [
         delta: { reference: deltaValues[0] },
         gauge: {
             axis: { range: [null, 200] tickwidth: 1, tickcolor: "darkblue"},
-             bar: { color: "lightgray" },
+             bar: { color: "lightgray" }
             // Use conditional color based on whether current value exceeds the delta reference
             steps: [
                 { range: [0, deltaValues[0]], color: "lightcoral" }, // Color before reaching delta reference
