--- a/gauge.html
+++ b/gauge.html
@@ -103,17 +103,24 @@ async function updateCharts() {
 ];
 
     // Data for chart 3
-    var data3 = [
-        {
-            domain: { x: [0, 1], y: [0, 1] },
-            value: currentValues[2],
-            title: { text: "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>" },
-            type: "indicator",
-            mode: "gauge+number+delta",
-            delta: { reference: deltaValues[2] },
-            gauge: { axis: { range: [null, 30000] } }
+   // Data for chart 3 with conditional coloring
+var data3 = [
+    {
+        domain: { x: [0, 1], y: [0, 1] },
+        value: currentValues[2],
+        title: { text: "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>" },
+        type: "indicator",
+        mode: "gauge+number+delta",
+        delta: { reference: deltaValues[2] },
+        gauge: {
+            axis: { range: [null, 30000], tickwidth: 1, tickcolor: "darkblue" },
+            steps: [
+                { range: [0, deltaValues[2]], color: "lightgreen" }, // Green for values below delta (better)
+                { range: [deltaValues[2], 30000], color: "lightcoral" } // Red for values above delta (worse)
+            ],
         }
-    ];
+    }
+];
 
     // The layout of your charts
     var layout = {
