--- a/gauge.html
+++ b/gauge.html
@@ -67,8 +67,8 @@ async function updateCharts() {
         mode: "gauge+number+delta",
         delta: { reference: deltaValues[0] },
         gauge: {
-            axis: { range: [null, 200], tickwidth: 1, tickcolor: "darkblue" }, // Corrected here
-            bar: { color: "darkgray" }, // Corrected here
+            axis: { range: [null, 200], tickwidth: 2, tickcolor: "darkblue" }, // Corrected here
+            bar: { color: "darkblue" }, // Corrected here
             // Use conditional color based on whether current value exceeds the delta reference
             steps: [
                 { range: [0, deltaValues[0]], color: "lightcoral" }, // Color before reaching delta reference
@@ -90,8 +90,8 @@ async function updateCharts() {
         mode: "gauge+number+delta",
         delta: { reference: deltaValues[1] },
         gauge: {
-            axis: { range: [null, 200], tickwidth: 1, tickcolor: "darkblue" }, // Corrected here
-            bar: { color: "darkgray" }, // Corrected here
+            axis: { range: [null, 200], tickwidth: 2, tickcolor: "darkblue" }, // Corrected here
+            bar: { color: "darkblue" }, // Corrected here
             // Use conditional color based on whether current value exceeds the delta reference
             steps: [
                 { range: [0, deltaValues[1]], color: "lightcoral" }, // Color before reaching delta reference
@@ -113,8 +113,8 @@ var data3 = [
         mode: "gauge+number+delta",
         delta: { reference: deltaValues[2] },
         gauge: {
-            axis: { range: [null, 30000], tickwidth: 1, tickcolor: "darkblue" },
-            bar: { color: "darkgray" }, // Corrected here
+            axis: { range: [null, 30000], tickwidth: 2, tickcolor: "darkblue" },
+            bar: { color: "darkblue" }, // Corrected here
             steps: [
                 { range: [0, deltaValues[2]], color: "lightgreen" }, // Green for values below delta (better)
                 { range: [deltaValues[2], 30000], color: "lightcoral" } // Red for values above delta (worse)
