--- a/gauge.html
+++ b/gauge.html
@@ -76,7 +76,7 @@ var data1 = [
             // Add a threshold line
             threshold: {
                 line: { color: "blue", width: 2 },
-                value: 100 // Set the threshold value
+                value: deltaValues[0] // Set the threshold value to delta value
             }
         }
     }
@@ -99,9 +99,9 @@ var data2 = [
                 { range: [deltaValues[1], 200], color: "lightgreen" }
             ],
             // Add a threshold line
-            threshold: {
+             threshold: {
                 line: { color: "blue", width: 2 },
-                value: 50 // Set the threshold value
+                value: deltaValues[1] // Set the threshold value to delta value
             }
         }
     }
@@ -124,9 +124,9 @@ var data3 = [
                 { range: [deltaValues[2], 30000], color: "lightcoral" }
             ],
             // Add a threshold line
-            threshold: {
+             threshold: {
                 line: { color: "blue", width: 2 },
-                value: 20000 // Set the threshold value
+                value: deltaValues[2] // Set the threshold value to delta value
             }
         }
     }
