--- a/gauge.html
+++ b/gauge.html
@@ -115,7 +115,7 @@ var data3 = [
         title: { text: "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>" },
         type: "indicator",
         mode: "gauge+number+delta",
-        delta: { reference: "$" + deltaValues[2] },
+        delta: { reference: "$"+ deltaValues[2] }
         gauge: {
             axis: { range: [null, 30000], tickwidth: 2, tickcolor: "darkblue" },
             bar: { color: "darkblue" },
