--- a/gauge.html
+++ b/gauge.html
@@ -107,7 +107,7 @@ var data2 = [
     }
 ];
 
-// Data for chart 3 with threshold line
+// Data for chart 3 with threshold line and "$" delta reference
 var data3 = [
     {
         domain: { x: [0, 1], y: [0, 1] },
@@ -115,7 +115,7 @@ var data3 = [
         title: { text: "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>" },
         type: "indicator",
         mode: "gauge+number+delta",
-        delta: { reference: "$"+ deltaValues[2] }
+        delta: { reference: "$"+ deltaValues[2] }, // Add "$" symbol to delta reference
         gauge: {
             axis: { range: [null, 30000], tickwidth: 2, tickcolor: "darkblue" },
             bar: { color: "darkblue" },
