--- a/gauge.html
+++ b/gauge.html
@@ -111,11 +111,11 @@ var data2 = [
 var data3 = [
     {
         domain: { x: [0, 1], y: [0, 1] },
-        value: currentValues[2],
+        value: "$"+ currentValues[2],
         title: { text: "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>" },
         type: "indicator",
         mode: "gauge+number+delta",
-        delta: { reference: "$"+ deltaValues[2] }, // Add "$" symbol to delta reference
+        delta: { reference: deltaValues[2] }, 
         gauge: {
             axis: { range: [null, 30000], tickwidth: 2, tickcolor: "darkblue" },
             bar: { color: "darkblue" },
