--- a/gauge.html
+++ b/gauge.html
@@ -111,7 +111,7 @@ var data2 = [
 var data3 = [
     {
         domain: { x: [0, 1], y: [0, 1] },
-        value: "$"+ currentValues[2],
+        value: currentValues[2],
         title: { text: "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>" },
         type: "indicator",
         mode: "gauge+number+delta",
