--- a/gauge.html
+++ b/gauge.html
@@ -108,6 +108,7 @@ var data2 = [
 ];
 
 // Data for chart 3 with threshold line
+// Data for chart 3 with threshold line
 var data3 = [
     {
         domain: { x: [0, 1], y: [0, 1] },
@@ -115,7 +116,7 @@ var data3 = [
         title: { text: "SVC Policy Dollars<br><span style='font-size:0.8em;color:gray'>Lower is Better</span>" },
         type: "indicator",
         mode: "gauge+number+delta",
-        delta: { reference: deltaValues[2] },
+        delta: { reference: deltaValues[2].toFixed(2) }, // Removed the dollar sign
         gauge: {
             axis: { range: [null, 30000], tickwidth: 2, tickcolor: "darkblue" },
             bar: { color: "darkblue" },
@@ -124,14 +125,13 @@ var data3 = [
                 { range: [deltaValues[2], 30000], color: "lightcoral" }
             ],
             // Add a threshold line
-             threshold: {
+            threshold: {
                 line: { color: "blue", width: 2 },
                 value: deltaValues[2] // Set the threshold value to delta value
             }
         }
     }
 ];
-
     // The layout of your charts
     var layout = {
         paper_bgcolor: "lightgray",
