--- a/clock.html
+++ b/clock.html
@@ -11,8 +11,8 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 2em;
+      font-family: 'arial', monospace;
+      font-size: 6em;
       text-align: center;
     }
   </style>
