--- a/clock.html
+++ b/clock.html
@@ -6,6 +6,7 @@
   <title>Web Clock</title>
   <style>
     body {
+      background-color: #9E9C9B;
       display: flex;
       justify-content: center;
       align-items: center;
