--- a/clock.html
+++ b/clock.html
@@ -19,12 +19,12 @@
       border: 5px solid white;
       border-radius: 10px;
       box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
-      padding: 20px;
+      padding: 30px;
     }
 
     .clock {
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 2em;
+      font-family: 'arial', Courier, monospace;
+      font-size: 5em;
       text-align: center;
       color: white;
     }
