--- a/dashboardpdi.html
+++ b/dashboardpdi.html
@@ -52,7 +52,7 @@
     </div>
    <div class="right-column">
         <div class="iframe-container">
-            <iframe src="https://www.tickcounter.com/widget/countdown/5051472" frameborder="0"></iframe>
+            <iframe src="clock.html" frameborder="0"></iframe>
         </div>
         <div class="iframe-container">
             <iframe src="text_rotator2.html" frameborder="0"></iframe>
