--- a/sheets_example.html
+++ b/sheets_example.html
@@ -13,7 +13,7 @@
         // Initialize the Google Sheets API client
         function initClient() {
             gapi.client.init({
-                apiKey: 'YOUR_API_KEY',
+                apiKey: 'AIzaSyCFvX56uc0WNPz2ZTJhpg7Q2pFOgZxt7-0',
                 discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
             }).then(function() {
                 // Call the function to load data from Google Sheet
@@ -24,8 +24,8 @@
         // Function to load data from Google Sheet
         function loadGoogleSheetData() {
             gapi.client.sheets.spreadsheets.values.get({
-                spreadsheetId: 'YOUR_SPREADSHEET_ID',
-                range: 'Sheet1!A1:C', // Change Sheet1 to your sheet name and adjust range accordingly
+                spreadsheetId: '1Em_4WKvdHbWu5WR2HCkd4JRVFaTsjJsqPHqDPRj8Gxs',
+                range: 'Sheet1!A1:B4', // Change Sheet1 to your sheet name and adjust range accordingly
             }).then(function(response) {
                 var data = response.result.values;
                 if (data.length > 0) {
