--- a/sheets.html
+++ b/sheets.html
@@ -35,7 +35,9 @@
             });
         }
 
-        function displayDataInTable(data1, data2) {
+            function displayDataInTable(data1, data2) {
+            console.log("Data 1:", data1);
+            console.log("Data 2:", data2);
             var table = document.createElement('table');
 
             // Create header row
